styles/style.css
*,*::before,*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

html,body{
    height: 100%;
    color: white;
}

nav {
    padding: 1em;
    width: 100%;
}

@media (max-width: 415px) {
    nav {
        padding: 1em 0.5em;
    }
}

@media (max-width: 370px) {
    nav {
        padding: 0.5em;
    }
}

nav p{
    width: max-content;
    padding: 0.5em 1em;
    border-radius: 5px;
    margin-left: auto;
    margin-right: 1.5em;
    cursor: pointer;
    background-color: rgb(45, 96, 236);
    box-shadow: 1px 1px 5px 0 black;
    border: 3px solid transparent;
    font-weight: 700;
    transition: all 360ms ease-in-out;
}

@media (max-width: 415px) {
    nav p {
        padding: 0.5em;
        margin-right: 0.25em;
        font-weight: normal;
        font-size: 0.9rem;
    }
}

@media (max-width: 370px) {
    nav p {
        padding: 0.5em;
        margin-right: 0.2em;
        font-weight: normal;
        font-size: 0.85rem;
    }
}

nav p:hover{
    background-color: transparent;
    border: 3px solid rgb(45, 96, 236);
    font-weight: 700;
    letter-spacing: 1px;
    transition: all 200ms ease-in-out;
}

.main_wrapper{
    background-image: linear-gradient(#1C264A, #121213);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
}

main{
    margin: auto;
    width: max-content;
    border-radius: 5px;
    border: 1px solid red;
}

.student_info{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0.3em;
    margin-bottom: 0.75em;
    border: 1px solid blue;
}

.student_info__first p,.student_info__second p  {
    font-size: clamp(0.85rem, 1.5vw, 1.25rem);
}

@media (max-width: 400px) {
    .student_info__first p,.student_info__second p {
        font-size: 0.75rem;
    }
}

.student_info__first span,.student_info__second span{
    color: rgb(37, 201, 201);
    font-weight: 600;
    font-size: clamp(1rem, 1.5vw, 1.25rem);
}

@media (max-width: 400px) {
    .student_info__first span, .student_info__second span {
        font-size: 0.75rem;
    }
}

.titles{
    width: max-content;
    display: flex;
    flex-direction: row;
    box-shadow: 0 0 5px 0px rgba(63, 63, 63, 0.75);
    border-radius: 5px 5px 0 0;
    margin-inline: auto;
    margin-bottom: 1em;
    border: 1px solid yellow;
}



.titles div {
    padding: 0.5em 1em;
    color:white;
    font-size: clamp(0.95rem, 1.5vw, 1.25rem);
    cursor: pointer;
}

@media (max-width: 400px) {
    .titles div {
        font-size: 0.85rem;
        padding: 0.5em;
    }
}

.titles div:first-child {
    border-radius: 5px 0 0 0;
}

.titles div:last-child {
    border-radius: 0 5px 0 0;
}

.titles div:nth-child(2n+1)  {
    background-color: rgb(73, 168, 216);
    color:white;
}

.titles div:nth-child(2n)  {
    background-color: rgb(69, 145, 184);
    color:white;    
}

.titles .selected.selected{
    background-color: rgb(255, 39, 39);
}

.info_section{
    width: 100%;
    min-height: 400px;
    max-height: 450px;
    border-radius: 0 0 5px 5px;
    overflow-y: auto;
}

.info_section__container{
    padding: 0.8em 0.5em;
    font-size: clamp(0.9rem, 1.5vw, 1.25rem);
}

.info_section__container:nth-child(2n + 1) {
    background-color: rgb(227, 241, 241);
}

.info_section__container:nth-child(2n) {
    background-color: rgb(203, 238, 238);
}

.info_section__container p {
    color: #303030;
    font-size: clamp(0.75rem, 1.5vw, 0.95);
    font-weight: bold;
}

.info_section__container span {
    color: rgb(38, 119, 151);
    font-weight: bold;
    font-size: clamp(0.75rem, 1.5vw, 1rem);
}

.info_section img {
    display: block;
    width: clamp(300px, 75vw, 500px);
    margin-inline: auto;
}

